<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BragOn</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="powerschool">PowerSchool</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="facebook">Facebook</string>
    <string name="email">email</string>
    <string name="default_email">you@email.com</string>
    <string name="app_id">284419148397455</string>
    <string name="get_started">To get started, log in using Facebook</string>

</resources>
