<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

	android:id="@+id/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >


    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/psLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/psTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerschool"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/psUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:maxLines="1" />

        <EditText
            android:id="@+id/psPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/psLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/log_in" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fbLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fbTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <!-- <fragment android:name="com.bragon.SelectionFragment"
          	android:id="@+id/selectionFragment"
          	android:layout_width="match_parent"
          	android:layout_height="match_parent" />
    	<fragment android:name="com.bragon.SplashFragment"
          	android:id="@+id/splashFragment"
          	android:layout_width="match_parent"
          	android:layout_height="match_parent" />-->
          	
          	<EditText
            android:id="@+id/fbUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_email"
            android:maxLines="1" />

        <EditText
            android:id="@+id/fbPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/fbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/log_in" />

    </LinearLayout>

</LinearLayout>